--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stylexjs/stylex": "^0.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
